# mihomo-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
builder/: go.mod  go.sum  lib.go
docs/: BUILD.md  CI.md
integration/: README.md
integration/it_works/: Cargo.toml
integration/it_works/src/: main.rs
libs/: README.md
mihomo/: Cargo.toml  README.md
mihomo-sys/: Cargo.toml  README.md  build.rs
mihomo-sys/builder/: go.mod  go.sum
mihomo-sys/src/: lib.rs
mihomo/examples/: in_process.rs
mihomo/src/: lib.rs
scripts/: build-libs.sh  bump-mihomo.sh
