[package]
name = "mihomo"
version.workspace = true
edition.workspace = true
description = "Safe in-process API for the mihomo proxy kernel (GPL-3.0)."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["mihomo", "proxy", "clash"]
categories = ["api-bindings", "network-programming"]

[dependencies]
mihomo-sys.workspace = true
